app/css/style.css
/* =============== VARIABLES =============== */
:root {
    /* colors */
    --primary-color: hsl(200, 19%, 59%);
    --background-color: black;
    --background-color-lighter: hsl(200, 0%, 0%, 0.6);

    --text-color: hsl(200, 7%, 88%, 0.8);
    --text-color-alt: hsl(200, 55%, 88%, 0.3);

    /* font sizes */
    --normal-font-size: .7rem;
    --h1-font-size: 3rem;
    --h2-font-size: 2rem;
    --h3-font-size: 1rem;
    --body-font-size: 1rem;

    /* font weights */
    --h1-weight: 200;
    --h2-weight: 200;
    --h3-weight: 600;

    /* misc */
    --general-padding: 5rem;
    --general-gap: 2rem;
    --title-margin: 1rem;

}

/* for small browsers */
@media screen and (min-width: 480px) and (max-width: 768px) {
    :root {
        --h1-font-size: 4.5rem;
        --h2-font-size: 3rem;
        --body-font-size: .8rem;
    }
}

/* for non-mobile */
@media screen and (min-width: 769px) {
    :root {
        /* font sizes */
        --h1-font-size: 8rem;
        --h2-font-size: 4rem;
        --h3-font-size: 1.5rem;
        --normal-font-size: 1rem;

        /* misc */
        --general-padding: 6rem;
        --general-gap: 4rem;
        --title-margin: 2rem;
    }
}

/* =============== GLOBALS =============== */

* {
    font-size: 100%;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    outline: none;
}

html {
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: var(--text-color);
}

ul {
    list-style: none;
}

img {
    max-width: 100%;
    height: auto;
    display: block;
}

body {
    width: 100%;
    overflow-x: hidden;
    margin-bottom: 100vh;

    display: block;
    font-size: var(--normal-font-size);
    font-family: 'Montserrat', sans-serif;;
    background-color: var(--background-color);
    color: var(--text-color);

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

h1 {
    font-size: var(--h1-font-size);
    font-weight: var(--h1-weight);
}

h2 {
    font-size: var(--h2-font-size);
    font-weight: var(--h2-weight);
    text-align: center;
    margin: var(--title-margin);
}

h3 {
    font-size: var(--h3-font-size);
    font-weight: var(--h3-weight);
    text-align: center;
}

p {
    font-size: var(--body-font-size);
}

.body-container {
    width: 80%;
    max-width: 100vh;
    height: auto;
    text-align: justify;

    margin-top: 120rem;

    display: flex;
    flex-direction: column;
    gap: 2rem;
    line-height: 2rem;
}

.body-self-links {
    cursor: pointer;
    padding-top: 4rem;
}

.body-self-links:hover {
    color: var(--text-color-alt);
}

/* =============== HEADER =============== */
#header{
    width: 100%;
    color: var(--text-color);
    position: fixed;
    padding: 1rem;
    transition: 0.3s;
    padding: 0.75rem;
    z-index: 1;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navigation-container {
    max-width: 35rem;
    width: 68%;

    display: flex;
    justify-content: space-between;
}

.menu-icon:hover,  #open-menu:hover, #menu-logo:hover, .hamburger-menu:hover{
    color: var(--text-color-alt);
}

.hamburger-menu {
    display: none;
}

#close-menu {
    display: none;
}

@media screen and (max-width: 480px) {
    #close-menu {
        display: unset;
    }

    .hamburger-menu {
        display: unset;
    }

    .navigation-container {
        display: none;

        position: fixed;
        top: -100%;
        right: 0;
        width: 100%;
        padding: 1.5rem 1rem 1rem;
        text-align: center;
        background-color: var(--background-color-lighter);

        display: flex;
        flex-direction: column;
        gap: 10px;
    }
}

/* ========== JAVASCRIPT HEADER HELPERS ========== */

#close-menu, #open-menu {
    position: absolute;
    right: 1.3rem;
    top: 1rem;
    cursor: pointer;
}

.show-menu {
    top: 0;
}

.hide-toggle {
    display: none;
}

.show-toggle {
    display: unset;
}

/* =============== TITLE =============== */
#title-container {
    width: 100%;
    max-height: 55rem;
    height: 98vw;
    padding-left: var(--general-padding);
    padding-right: var(--general-padding);

    display: flex;
    justify-content: flex-start;
    align-content: center;
}

#title-text {
    position: relative;
    white-space: nowrap;
    font-size: var(--h1-font-size);
    align-self: center;
    color: var(--text-color);
    z-index: 2;
    margin-left: -2rem;
}

#title-image {
    position: absolute;
    max-height: 55rem;
    height: 98vw;
    width: auto;
    max-width: 50vw;
    object-fit: cover;
    right: 0;
    margin-right: 2rem;
}

/* ========== ABOUT ========== */
#about-container {
    text-align: center;
    gap: var(--general-gap);
}

/* ========== TUITION ========== */
#tuition-container {
    text-align: center;
    gap: var(--general-gap);
}

#fees {
    display: flex;
    flex-direction: column;
    gap: .5rem;
}

/* ========== CLASSES ========== */
#classes-container {
    text-align: center;
    gap: var(--general-gap);
}


/* ========== TRANSITIONS ========== */

.fade-in {
    opacity: 0;
    transition: opacity 250ms ease-in;
}

.fade-in.appear {
    opacity: 1;
}

.from-left {
    transform: translateX(-50%);
}

.from-right {
    transform: translateX(50%);
}

.from-left, .from-right {
    transition: opacity 250ms ease-in, transform 800ms ease-in;
    opacity: 0;
}

.from-left.appear, .from-right.appear {
    transform: translateX(0);
    opacity: 1;
}

.fade-slowly {
    transition: opacity 2s ease-in;
}

.fade-very-slowly {
    transition: opacity 4s ease-in;
}

/* ========== MEDIA QUERIES ========== */
/* laptop size */
@media screen and (min-width: 1025px) {
    #title-text {
        margin-left: 6rem;
    }
} 

